--- a/package.json
+++ b/package.json
@@ -20,13 +20,18 @@
     "path": "^0.12.7",
     "pdfkit": "^0.14.0",
     "postcss-cli": "^11.0.0",
+    "prettier": "^3.3.3",
+    "prettier-eslint": "^16.3.0",
     "sqlite3": "^5.1.7"
   },
   "author": "Viktor Hadzhiyski",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.9.1",
     "autoprefixer": "^10.4.20",
     "depcheck": "^1.4.3",
+    "eslint": "^9.9.1",
+    "globals": "^15.9.0",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10"
   },
