--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node backend.js",
     "lint": "eslint .",
     "build": "rollup -c",
-    "build-css": "npx postcss public/css/style.css -o public/css/tailwind.css"
+    "build-css": "npx tailwindcss -i ./public/css/style.css -o ./public/css/output.css --watch"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jspdf": "^2.5.1",
+    "nodemon": "^3.1.4",
     "path": "^0.12.7",
     "pdfkit": "^0.14.0",
     "postcss-cli": "^11.0.0",
@@ -33,7 +34,7 @@
     "eslint": "^9.9.1",
     "globals": "^15.9.0",
     "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.11"
   },
   "pkg": {
     "assets": [
