--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "node backend.js",
     "dev": "vite --config ./configs/vite.config.js",
     "build": "vite build --config ./configs/vite.config.js",
+    "build-css": "npx tailwindcss -i ./public/css/style.css -o ./public/css/output.css --watch",
+
     "lint": "eslint ."
   },
   "dependencies": {
@@ -31,19 +33,16 @@
     "autoprefixer": "^10.4.20",
     "depcheck": "^1.4.3",
     "eslint": "^9.9.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.9.0",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
-    "tailwindcss": "^3.4.11"
+    "tailwindcss": "^3.4.16"
   },
   "pkg": {
-    "assets": [
-      "./**/*",
-      "!node_modules/**/*"
-    ],
-    "scripts": [
-      "./**/*.js"
-    ]
+    "assets": ["./**/*", "!node_modules/**/*"],
+    "scripts": ["./**/*.js"]
   }
 }
