--- a/settings.json
+++ b/settings.json
@@ -1,9 +1,12 @@
 {
-    "editor.defaultFormatter": "rvest.vs-code-prettier-eslint",
-    "editor.formatOnType": false, // required
-    "editor.formatOnPaste": true, // optional
-    "editor.formatOnSave": true, // optional
-    "editor.formatOnSaveMode": "file", // required to format on save
-    "files.autoSave": "onFocusChange", // optional but recommended
-    "vs-code-prettier-eslint.prettierLast": true // set as "true" to run 'prettier' last not first
-  }
+  "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "editor.fontFamily": "'JetBrains Mono NFM', 'JetBrains Mono', Consolas, 'Courier New', monospace",
+  "eslint.alwaysShowStatus": true,
+  "eslint.options": {
+    "overrideConfigFile": "~/eslint.config.mjs"
+  },
+  "prettier.configPath": "~/.prettierrc"
+}
