--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "dev": "vite --config ./configs/vite.config.js",
     "build": "vite build --config ./configs/vite.config.js",
     "build-css": "npx tailwindcss -i ./public/css/style.css -o ./public/css/output.css --watch",
-
     "lint": "eslint ."
   },
   "dependencies": {
@@ -42,7 +41,12 @@
     "tailwindcss": "^3.4.16"
   },
   "pkg": {
-    "assets": ["./**/*", "!node_modules/**/*"],
-    "scripts": ["./**/*.js"]
+    "assets": [
+      "./**/*",
+      "!node_modules/**/*"
+    ],
+    "scripts": [
+      "./**/*.js"
+    ]
   }
 }
