--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "backend.js",
   "bin": "backend.js",
   "scripts": {
-    "start": "node backend.js",
+    "start": "node --watch backend.js",
     "build-tailwind": "npx tailwindcss -i ./public/css/style.css -o ./public/css/outputTailwind.css --watch",
     "lint": "eslint ."
   },
