--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "alpinejs": "^3.14.8",
+    "dayjs": "^1.11.13",
+    "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "flatpickr": "^4.6.13",
     "pdfkit": "^0.16.0",
     "postcss-cli": "^11.0.0",
     "sqlite3": "^5.1.7"
