--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "flatpickr": "^4.6.13",
     "pdfkit": "^0.16.0",
     "postcss-cli": "^11.0.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "uuid": "^11.1.0",
+    "zod": "^3.24.2"
   },
   "author": "Viktor Hadzhiyski",
   "license": "ISC",
